--- a/kubernetes/rosetta-3-ciim/config/application.yml
+++ b/kubernetes/rosetta-3-ciim/config/application.yml
@@ -336,8 +336,8 @@ rosetta:
           config:
             properties:
               elasticsearch:
-                url: http://a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com/es
-                auth_token: ZWxhc3RpYzpnNG03Tm05d2wwUjEwTk1ibjlEOU9OMjI=
+                url: http://a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com/es-2
+                auth_token: ZWxhc3RpYzo1MzI0M1VTOWVmSDhFMmNhMlh0ZUM3VlE=
 
   monitoring:
     log_stages: true
