--- a/kubernetes/ciim-staging/properties/app_ctx_transient.properties
+++ b/kubernetes/ciim-staging/properties/app_ctx_transient.properties
@@ -38,7 +38,7 @@ ciim.data.dir=/ciim
 elasticsearch.cluster=ciim-internal-etna
 elasticsearch.client.host=ciim-internal-etna-es-http.etna
 
-media.process.files=false
+media.process.files=true
 media.zoom.processing.enabled=false
 media.ciim.dir=/ciim/ciim-media
 media.processing.timeout=180000
