--- a/kubernetes/rosetta-3-ciim/kustomization.yml
+++ b/kubernetes/rosetta-3-ciim/kustomization.yml
@@ -21,3 +21,4 @@ configMapGenerator:
       - ./config/inject_highlighting.json
       - ./config/hierarchy_count_query.json
       - ./config/heldby_count_query.json
+      - ./config/inject_digitised_exists_filter.json
