--- a/kubernetes/rosetta-3-ciim/config/application.yml
+++ b/kubernetes/rosetta-3-ciim/config/application.yml
@@ -48,6 +48,7 @@ rosetta:
               - ciim/search/request
               - inject-highlighting
               - merge-advance-parameters
+              - inject-exists_digitised-filter
           response:
             policy: list
             names:
