cleanTitle & Description: Title Limit, Description Limit -> Input-> full

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -281,6 +281,7 @@ rosetta:
 
       - name: ciim/search/response
         type: proteus
+        input: full
         properties:
           mutable: true
           spec: ${base_paths.proteus}/ciim_search_response.json
