--- a/kubernetes/acme/acme_ingress.yml
+++ b/kubernetes/acme/acme_ingress.yml
@@ -11,7 +11,7 @@ spec:
     - hosts:
         - rosetta-dev.k-int.com
   rules:
-    - host: rosetta-staging.k-int.com
+    - host: rosetta-dev.k-int.com
       http:
         paths:
           - path: /.well-known/acme-challenge
