--- a/kubernetes/rosetta-3-ciim/config/application.yml
+++ b/kubernetes/rosetta-3-ciim/config/application.yml
@@ -241,7 +241,7 @@ rosetta:
               title: "summary.title.keyword"
               longSubject: "subjects.subject.summary.title.keyword"
               longHeldBy: "repository.name.value.keyword"
-              longCollections: "@hierarch.identifier.value"
+              longCollection: "@hierarch.identifier.value"
               datatype: "@datatype.base"
           aggregation_configs:
             - name: longSubject
