--- a/kubernetes/overlays/ciim/kustomization.yaml
+++ b/kubernetes/overlays/ciim/kustomization.yaml
@@ -9,6 +9,7 @@ bases:
   - ../../acme
   - ../../public-es-2
   - ../../rosetta-3-ciim-staging
+  - ../../rosetta-3-ciim-prod
 commonAnnotations:
   environment: dev
 patchesStrategicMerge:
