--- a/kubernetes/rosetta-3-ciim/config/application.yml
+++ b/kubernetes/rosetta-3-ciim/config/application.yml
@@ -243,7 +243,8 @@ rosetta:
               longHeldBy: "repository.name.value.keyword"
               longCollection: "@hierarch.identifier.value"
               datatype: "@datatype.base"
-              schema: "@datatype.actual"
+              schema: "@datatype.actual",
+              descSchema: "description.schema"
           aggregation_configs:
             - name: longSubject
               size: 10000
