--- a/kubernetes/rosetta-3-ciim/config/application.yml
+++ b/kubernetes/rosetta-3-ciim/config/application.yml
@@ -244,7 +244,7 @@ rosetta:
               longCollection: "@hierarch.identifier.value"
               datatype: "@datatype.base"
               schema: "@datatype.actual"
-              descSchema: "description.schema"
+              descSchema: "description.schema.keyword"
           aggregation_configs:
             - name: longSubject
               size: 10000
