--- a/kubernetes/rosetta-3-ciim-staging/config/application.yml
+++ b/kubernetes/rosetta-3-ciim-staging/config/application.yml
@@ -243,6 +243,9 @@ rosetta:
               longHeldBy: "repository.name.value.keyword"
               longCollection: "@hierarch.identifier.value"
               datatype: "@datatype.base"
+              schema: "@datatype.actual"
+              descSchema: "description.schema.keyword"
+              dateCovering: "origination.date.from"
           aggregation_configs:
             - name: longSubject
               size: 10000
