--- a/kubernetes/rosetta-3-ciim-prod/config/application.yml
+++ b/kubernetes/rosetta-3-ciim-prod/config/application.yml
@@ -17,12 +17,12 @@ rosetta:
         - name: fast-cache
           expire_after_write: 12h
           maximum_size: 2000000
-          use_scheduler: true
+          use_scheduler: false
 
         - name: slow-cache
           expire_after_write: 24h
           maximum_size: 2000000
-          use_scheduler: true
+          use_scheduler: false
 
   cache:
     enabled: true
