--- a/kubernetes/ciim-ingress/prod_ingress.yml
+++ b/kubernetes/ciim-ingress/prod_ingress.yml
@@ -22,6 +22,13 @@ spec:
                 name: ciim-service
                 port:
                   name: api-port
+          - path: /rosetta/data/search
+            pathType: Prefix
+            backend:
+              service:
+                name: rosetta-3-service-prod-search
+                port:
+                  name: api-port
           - path: /
             pathType: Prefix
             backend:
