added search rosetta

--- a/kubernetes/public-es-2/public-es.yml
+++ b/kubernetes/public-es-2/public-es.yml
@@ -41,11 +41,11 @@ spec:
             - name: elasticsearch
               env:
                 - name: ES_JAVA_OPTS
-                  value: "-Xms20g -Xmx20g -Dlog4j2.formatMsgNoLookups=true"
+                  value: "-XX:MaxRAMPercentage=50.0 -Dlog4j2.formatMsgNoLookups=true"
               resources:
                 requests:
                   memory: 22Gi
-                  cpu: 1
+                  cpu: 5
                 limits:
                   memory: 22Gi
               volumeMounts:
