--- a/kubernetes/ciim-ingress/prod_ingress.yml
+++ b/kubernetes/ciim-ingress/prod_ingress.yml
@@ -33,6 +33,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: rosetta-3-service-prod
+                name: rosetta-3-service-prod-search
                 port:
                   name: rosetta-port
