--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -326,11 +326,11 @@ rosetta:
       - name: elasticsearchEtna
         type: elasticsearch
         properties:
-          host: ciim-public-es-http.etna
+          host: http://a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com/es-2
           port: 9200
           index: ciim
           username: elastic
-          password: Kng6K7J41j882P77EQeS9cTI
+          password: 53243US9efH8E2ca2XteC7VQ
 
   monitoring:
     log_stages: true
