--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -326,7 +326,8 @@ rosetta:
       - name: elasticsearchEtna
         type: elasticsearch
         properties:
-          host: a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com/es-2
+          host: a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com
+          pathPrefix: es-2
           protocol: https
           port: 9200
           index: ciim
