added search rosetta

--- a/kubernetes/ohos/rosetta-3/config/application.yml
+++ b/kubernetes/ohos/rosetta-3/config/application.yml
@@ -328,8 +328,8 @@ rosetta:
         properties:
           host: a39d49540865649989abbc5d2f5c409b-4d2c93a40177d71e.elb.eu-west-2.amazonaws.com
           path_prefix: es-2
-          protocol: http
-          port: 9200
+          protocol: https
+          port: 443
           index: ciim
           username: elastic
           password: 53243US9efH8E2ca2XteC7VQ
