--- a/kubernetes/ingress/ingress.yml
+++ b/kubernetes/ingress/ingress.yml
@@ -7,28 +7,7 @@ metadata:
     kubernetes.io/ingress.class: kong
     konghq.com/plugins: request-transform-etna
 spec:
-  tls:
-    - hosts:
-        - rosetta-staging.k-int.com
-      secretName: tls-secret-rosetta
   rules:
-    - host: rosetta-staging.k-int.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: rosetta-3-service
-                port:
-                  name: rosetta-port
-          - path: /iiif/
-            pathType: Prefix
-            backend:
-              service:
-                name: iiif-service
-                port:
-                  name: iiif-port
     - host: afa13a7c0067b4f01991b0bad9e003a4-edf0e30af2b95f5f.elb.eu-west-2.amazonaws.com
       http:
         paths:
@@ -36,20 +15,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: rosetta-3-service
+                name: rosetta-3-test-service
                 port:
                   name: rosetta-port
-          - path: /tna/api/
-            pathType: Prefix
-            backend:
-              service:
-                name: ciim-service
-                port:
-                  name: api-port
-          - path: /ciim/
-            pathType: Prefix
-            backend:
-              service:
-                name: ui-service
-                port:
-                  name: ui-port
