Added id to dev

--- a/kubernetes/rosetta-3-ciim-prod/config/application.yml
+++ b/kubernetes/rosetta-3-ciim-prod/config/application.yml
@@ -3,8 +3,8 @@ base_paths:
 
 logging:
   level:
-    com.k_int.proteus.component.core.HttpRequestSpec: trace
-    com.k_int.proteus.provider.http.client.OkHttpClientFacade: trace
+    com.k_int.proteus.component.core.HttpRequestSpec: warn
+    com.k_int.proteus.provider.http.client.OkHttpClientFacade: warn
 
 rosetta:
   admin:
