--- a/kubernetes/rosetta-3-ciim-prod/rosetta.yml
+++ b/kubernetes/rosetta-3-ciim-prod/rosetta.yml
@@ -44,7 +44,7 @@ spec:
               mountPath: /rosetta/config
           env:
             - name: JAVA_OPTS
-              value: "-Dspring.profiles.active=non-default-for-trace-logging -XX:MaxRAMPercentage=80.0 -XX:+PrintFlagsFinal -XX:+UseZGC"
+              value: "-XX:MaxRAMPercentage=80.0 -XX:+PrintFlagsFinal -XX:+UseZGC"
           resources:
             requests:
               memory: 12Gi
