--- a/kubernetes/overlays/ohos/kustomization.yaml
+++ b/kubernetes/overlays/ohos/kustomization.yaml
@@ -2,7 +2,7 @@ bases:
   - ../../ohos/base
   - ../../ohos/eks
   - ../../ohos/kong
-  - ../../ohos/ingress
+  - ../../ohos/ingress-ciim
   - ../../ohos/ciim
   - ../../ohos/internal-es
   - ../../ohos/public-es
