re-added kong to ohos

--- a/kubernetes/overlays/ohos/kustomization.yaml
+++ b/kubernetes/overlays/ohos/kustomization.yaml
@@ -2,6 +2,7 @@ bases:
   - ../../ohos/base
   - ../../ohos/eks
   - ../../ohos/kong
+  - ../../ohos/ingress-ciim
   - ../../ohos/ciim
   - ../../ohos/internal-es
   - ../../ohos/public-es
