--- a/kubernetes/ohos/ciim/ciim-secrets.yml
+++ b/kubernetes/ohos/ciim/ciim-secrets.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  ciim.db.password: alRoMzM5JXc9MyQ=
+  ciim.db.password: dzVDeEZpOXIxZlR1T3BSMHpXQXY=
   ciim.db.username: YWRtaW4=
 ---
 apiVersion: v1
@@ -15,7 +15,7 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  elasticsearch.auth.password: ZFRGbE5uY3lNVzFvTWt3elJqVTNNVkZNTUV4VWRVaGg=
+  elasticsearch.auth.password: U1RoRWFFcGlUMjg0Wm1Jd05ra3lSamxwTkRZM2NqaFk=
 ---
 apiVersion: v1
 kind: Secret
@@ -24,7 +24,7 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  publication.es.auth.password: WnpFNU5ERTFSMWRsWkVwak1WcGlkalIzT0Rkd2R6Vkw=
+  publication.es.auth.password: UkRGd1pETnZOakJaZW1OcE1rczBOelV4T0U5VmRGVm8=
 ---
 apiVersion: v1
 kind: Secret
@@ -33,7 +33,7 @@ metadata:
   namespace: tna-ohos
 type: Opaque
 data:
-  publication.es.clean.auth.password: VURBMFJ6UTNiRzlxZDNaM2F6Y3lhMk0xZERnMFNsYzM=
+  publication.es.clean.auth.password: VWxKUFR6WTBkV1UxYmxwaU16a3dZamN3U0c1Vk1rVTA=
 ---
 apiVersion: v1
 kind: Secret
