Added missing files

--- a/kubernetes/rosetta-3-TEST/kustomization.yml
+++ b/kubernetes/rosetta-3-TEST/kustomization.yml
@@ -18,3 +18,7 @@ configMapGenerator:
       - ./config/component_search.json
       - ./config/provider.json
       - ./config/merge_advance_parameters.json
+      - ./config/inject_highlighting.json
+      - ./config/hierarchy_count_query.json
+      - ./config/heldby_count_query.json
+      - ./config/inject_digitised_exists_filter.json
