DateRange:openingFromDate, openingToDate

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -217,9 +217,9 @@ rosetta:
                   to: "1949"
                 - from: "1950"
                   to: "3000"
-            - path: "availability.access.opening.date.from"
+            - path: "origination.date.from"
               agg_name: "openingFromDate"
-            - path: "availability.access.opening.date.to"
+            - path: "origination.date.to"
               agg_name: "openingToDate"
             - path: "origination.date.from"
               agg_name: "coveringFromDate"
