--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -203,6 +203,24 @@ rosetta:
           mutable: true
           spec: ${base_paths.proteus}/elastic_modifications.json
 
+      - name: ciim/ids/request
+        type: proteus
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/ciim_ids_request.json
+
+      - name: ciim/ids/response
+        type: proteus
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/ciim_ids_response.json
+
+      - name: ciim/get/request
+        type: proteus
+        properties:
+          mutable: true
+          spec: ${base_paths.proteus}/ciim_get_request.json
+
       - name: generic-to-elastic
         type: elastic-generic-search
         properties:
