--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -111,6 +111,7 @@ rosetta:
         paths:
           - /rosetta/data/random-ids
         profile: generic-search
+        type: advanced-cache-multi
         transforms:
           request:
              policy: list
