--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -110,7 +110,7 @@ rosetta:
       - name: ciim/ids
         paths:
           - /rosetta/data/random-ids
-        profile: generic-search
+        profile: random-ids
         type: advanced-cache-multi
         transforms:
           request:
@@ -124,6 +124,18 @@ rosetta:
 
   profile:
     profiles:
+      - name: random-ids
+        providers:
+          policy: list
+          names:
+            - elasticsearchEtna
+        transforms:
+          request:
+            - glyphs:
+                policy: list
+                names:
+                  - ciim/ids/request
+
       - name: elasticsearch
         providers:
           policy: list
