RandomIDSResponse:Size issue fixes

--- a/kubernetes/rosetta-3-TEST/kustomization.yml
+++ b/kubernetes/rosetta-3-TEST/kustomization.yml
@@ -22,3 +22,5 @@ configMapGenerator:
       - ./config/hierarchy_count_query.json
       - ./config/heldby_count_query.json
       - ./config/inject_digitised_exists_filter.json
+      - ./config/random_ids_response.json
+      - ./config/random_ids_request.json
