--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -110,7 +110,7 @@ rosetta:
       - name: ciim/ids
         paths:
           - /rosetta/data/random-ids
-        profile: generic-search
+        profile: random-ids
         transforms:
           request:
             policy: list
@@ -123,6 +123,11 @@ rosetta:
 
   profile:
     profiles:
+      - name: random-ids
+        providers:
+          policy: list
+          names:
+            - elasticsearchEtna
       - name: elasticsearch
         providers:
           policy: list
