--- a/kubernetes/ciim-ingress/ingress.yml
+++ b/kubernetes/ciim-ingress/ingress.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: etna
   annotations:
     kubernetes.io/ingress.class: kong
-    konghq.com/plugins: request-transform-etna
+    konghq.com/plugins: request-transform-etna,python-requests-rate-limit
 spec:
   tls:
     - hosts:
