--- a/kubernetes/acme/acme_ingress.yml
+++ b/kubernetes/acme/acme_ingress.yml
@@ -7,6 +7,7 @@ metadata:
     kubernetes.io/ingress.class: kong
     konghq.com/protocols: "http"
 spec:
+  ingressClassName: kong
   tls:
     - hosts:
         - rosetta-staging.k-int.com
