RandomIDSResponse:Application.yml fixes

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -116,6 +116,7 @@ rosetta:
           request:
             policy: list
             names:
+              - to-generic-search
               - ciim/ids/request
           response:
             policy: list
