DateRange:Profile -> transform

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -131,6 +131,12 @@ rosetta:
           policy: list
           names:
             - elasticsearchEtna
+        transforms:
+          request:
+            policy: list
+            names:
+              -generic-to-elastic
+
       - name: elasticsearch
         providers:
           policy: list
