--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -346,6 +346,8 @@ rosetta:
         properties:
           mutable: true
           spec: ${base_paths.proteus}/random_ids_response.json
+          include:
+            - ./config/component_search.json
 
       - name: ciim/get/request
         type: proteus
