DateRange:Profile -> transform

--- a/kubernetes/rosetta-3-TEST/config/application.yml
+++ b/kubernetes/rosetta-3-TEST/config/application.yml
@@ -135,6 +135,7 @@ rosetta:
             - glyphs:
                 policy: list
                 names:
+                  - generic-to-elastic
                   - ciim/ids/request
       - name: elasticsearch
         providers:
